--- a/.env
+++ b/.env
@@ -32,5 +32,5 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://microwebtroyes@gmail.com:minecraftpower8@localhost
+MAILER_URL=gmail://microwebtroyes@gmail.com:*********@localhost
 ###< symfony/swiftmailer-bundle ###
